test+fix(phase14): 跨浏览器 E2E + Load Test + 3 P1-C 性能修复 (#201)
* test(perf): Phase 14 跨浏览器 E2E + Load Test + Staging Validation

【根因】
之前所有验证都是 Chromium + 代码静态推演。Phase 14 真实跨浏览器验证
Chromium + WebKit (Safari) + Firefox 三引擎 30/30 PASS,无浏览器独占 bug。
Load Test 真实数据证明 PPT/HTML 课件性能问题 + Staging Validation
确认生产 Flyway V327-V332 兼容性。

【新增】
- e2e-tests/phase14-cross-browser.spec.js: 三引擎跨浏览器测试矩阵
- e2e-tests/fixtures/cross-browser-test.pptx: python-pptx 真实生成
- scripts/load-test-courseware.{js,k6,seed.sql}: k6 真实负载测试 (p99<200ms)
- scripts/staging-validation.sh: 生产 Flyway V327-V332 验证脚本

【验证】
- 跨浏览器 30/30 PASS (Chromium/WebKit/Firefox)
- Staging validation 8/8 PASS

Signed-off-by: jackie <jackie@ailyedu.local>
Signed-off-by: 总工程师 <engineer@microcourse.local>

* fix(perf): Phase14 真实性能修复 - 教师tree N+1/载荷冗余/空src误导 (P1-C)

【根因】
Phase 14 Load Test 真实数据证明 3 个 P1-C:
1. 教师 tree 端点仍是 N+1 (Q-2 只修了学生 pages 路径) - 30 页 100 并发 p99=2.51s
2. 响应载荷冗余 79% - flow 复制到每个 page 节点 (180KB→37KB)
3. 空 src 触发误导性 onAudioError - 三浏览器都误显示"浏览器不支持该音频格式"

【修复】
1. buildPptTree 用批量查询 (listActiveByPageIds + listByScriptIds) 替代逐页循环
   + tree Redis 缓存 (TTL 10min, 写路径失效)
2. flows 字段从每页重复改为按 fromPageId 子集化挂载 (870→29 条, -96.7% 载荷)
3. onAudioError 加 src 空检查 - reset 操作不作 error 态处理

【验证】
Load Test 重测: TREE30@100 p99 2.51s → 126.81ms (-19.8x)
全量单测 1248 通过; eslint + build 通过

【防止再发】
- CoursewareQueryServiceTest 防回归断言 (批量查询 + 缓存命中)
- 定期跑 load-test-courseware 监控 p99 预算

Signed-off-by: jackie <jackie@ailyedu.local>

---------

Signed-off-by: jackie <jackie@ailyedu.local>
Signed-off-by: 总工程师 <engineer@microcourse.local>
Co-authored-by: 总工程师 <engineer@microcourse.local>